[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "nbexchange"
version = "1.2.6"
description = "Jupyterhub extension that provides an exchange service for nbgrader."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["nbgrader", "jupyter", "notebook"]
authors = [
  {email = "Ian.Stuart@ed.ac.uk"},
  {name = "Ian Stuart"}
]
maintainers = [
  {name = "Ian Stuart", email = "Ian.Stuart@ed.ac.uk"},
  {name = "Ludvig Kihlman", email = "Ludvig.Kihlman@ed.ac.uk"},
  {name = "Bert Robberechts", email = "bert.robberechts@ed.ac.uk"},
]
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Intended Audience :: Education",
]

dependencies = [
  "alembic==1.6.5",
  "tornado==6.1",
  "psycopg2-binary==2.8.6",
  "jupyterhub==1.4.1",
  "sentry-sdk==1.1.0",
  "sqlalchemy>=1.4.3",
  "nbgrader @ git+https://github.com/jupyter/nbgrader.git@66984e5732c98bd15733c027601a62fca6a46222",
  "pyjwt==2.1.0",
  "tornado-prometheus==0.1.1",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov[all]",
  "pytest-tornado",
  "pytest-docker-tools",
  "beautifulsoup4",
  "html5lib",
  "psycopg2-binary",
  "mock",
]

[project.urls]
homepage = "https://edina.ac.uk"
documentation = "https://nbexchange.readthedocs.org"
repository = "https://github.com/edina/nbexchange"
changelog = "https://github.com/edina/nbexchange/blob/master/CHANGELOG.md"

[project.scripts]
nbexchange = "nbexchange.app:NbExchange.launch_instance"
